@@ -1,47 +1,32 @@
 package com.zharnikova.example.service;
 
-import com.zharnikova.example.DataSource;
-import com.zharnikova.example.dao.CustomerDao;
 import com.zharnikova.example.dao.ProductDao;
-import com.zharnikova.example.dto.CustomerDto;
+
 import com.zharnikova.example.dto.CustomerProductDto;
 import com.zharnikova.example.dto.ProductDto;
-import com.zharnikova.example.mapper.CustomerProductMapper;
-import com.zharnikova.example.model.Customer;
 import com.zharnikova.example.model.CustomersProducts;
 import com.zharnikova.example.model.Product;
 import com.zharnikova.example.repository.ProductRepository;
-import org.junit.Before;
-
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.InjectMocks;
+import org.mockito.Mock;
+import org.mockito.MockitoAnnotations;
+import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.sql.SQLException;
-
-import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
 import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.Mockito.when;
-import static org.powermock.api.mockito.PowerMockito.doNothing;
-
-
 import static org.mockito.Mockito.*;
-
-import org.junit.runner.RunWith;
-import org.mockito.InjectMocks;
-import org.mockito.Mock;
-import org.mockito.MockitoAnnotations;
-
-import org.powermock.core.classloader.annotations.PrepareForTest;
-import org.powermock.modules.junit4.PowerMockRunner;
+import static org.powermock.api.mockito.PowerMockito.when;
 
 
-@RunWith(PowerMockRunner.class)
-@PrepareForTest({ProductDao.class, ProductRepository.class})
+@ExtendWith(MockitoExtension.class)
  class ProductServiceTest {
-
     @Mock
     private ProductDao productDao;
 
@@ -51,73 +36,122 @@ import org.powermock.modules.junit4.PowerMockRunner;
     @InjectMocks
     private ProductService productService;
 
-    @Before
+    @BeforeEach
     public void setUp() {
-        MockitoAnnotations.initMocks(this);
+        MockitoAnnotations.openMocks(this);
+    }
+
+
+    @Test
+     void testGetAll_Success() throws SQLException {
+        // Arrange
+        List<Product> products = List.of(new Product(1, "Product1","Description",23.5,20), new Product(2, "Product2","Description2",20.8,10));
+        when(productDao.getAll()).thenReturn(products);
+
+        // Act
+        List<ProductDto> result = productService.getAll();
+
+        // Assert
+        assertEquals(2, result.size());
+        verify(productDao, times(1)).getAll();
     }
 
     @Test
-     void testGetAll() throws SQLException {
-        List<Product> products = Collections.singletonList(new Product(1, "product","description",20.0,10));
-        when(productDao.getAll()).thenReturn(products);
-        assertNull(productDao.getAll());
+     void testGetAll_Exception() throws SQLException {
+        // Arrange
+        when(productDao.getAll()).thenThrow(new SQLException("Database error"));
+
+        // Act
         List<ProductDto> result = productService.getAll();
 
-        assertNotNull(result);
-        assertEquals(1, result.size());
-        assertEquals("Test Product", result.get(0).getName());
+        // Assert
+        assertTrue(result.isEmpty());
+        verify(productDao, times(1)).getAll();
     }
 
     @Test
      void testDelete() throws SQLException {
-        doNothing().when(productDao).delete(1);
+        int productId = 1;
 
-        productService.delete(1);
+        // No exception should be thrown
+        productService.delete(productId);
 
-        verify(productDao, times(1)).delete(1);
+        // Verify that the delete method was called with the correct parameter
+        verify(productDao, times(1)).delete(productId);
     }
 
     @Test
-     void testAdd() throws SQLException {
-        Product product = new Product(1, "product","description",20.0,10);
-        doNothing().when(productDao).add(product);
+     void testDeleteThrowsRuntimeException() throws SQLException {
+        int productId = 1;
+        doThrow(new SQLException()).when(productDao).delete(productId);
 
+        // Assert that a RuntimeException is thrown
+        assertThrows(RuntimeException.class, () -> productService.delete(productId));
+    }
+
+    @Test
+     void testAddProductSuccess() throws SQLException {
+        Product product = new Product();
         productService.add(product);
-
-        verify(productDao, times(1)).add(product);
+        verify(productDao).add(product);
     }
 
     @Test
-     void testUpdate() throws SQLException {
-        Product product = new Product(1, "product","description",20.0,10);
-        doNothing().when(productDao).update(product);
+     void testAddProductThrowsException() throws SQLException {
+        Product product = new Product();
+        doThrow(new SQLException()).when(productDao).add(product);
+        assertThrows(RuntimeException.class, () -> productService.add(product));
+    }
 
+    @Test
+    public void testUpdateProductSuccess() throws SQLException {
+        Product product = new Product();
         productService.update(product);
-
-        verify(productDao, times(1)).update(product);
+        verify(productDao).update(product);
     }
 
     @Test
-     void testGetById() throws SQLException {
-        Product product = new Product(1, "product","description",20.0,10);
+    public void testUpdateProductThrowsException() throws SQLException {
+        Product product = new Product();
+        doThrow(new SQLException()).when(productDao).update(product);
+        assertThrows(RuntimeException.class, () -> productService.update(product));
+    }
+
+    @Test
+     void testGetById() {
+        Product product = new Product(1, "Product1","Description",23.5,20);
         when(productDao.getById(1)).thenReturn(Optional.of(product));
 
         Optional<Product> result = productService.getById(1);
-
         assertTrue(result.isPresent());
-        assertEquals("Test Product", result.get().getName());
+        assertEquals("Product1", result.get().getName());
     }
 
-//    @Test
-//     void testGetCustomerProductNamesAll() throws SQLException {
-//        List<CustomersProducts> customersProducts = Collections.singletonList(new CustomersProducts( "Customer", "Product"));
-//        when(productRepository.getCustomerProductNames()).thenReturn(customersProducts);
-//
-//        List<CustomerProductDto> result = productService.getCustomerProductNamesAll();
-//
-//        assertNotNull(result);
-//        assertEquals(1, result.size());
-//        assertEquals("Customer", result.get(0).getCustomerName());
-//        assertEquals("Product", result.get(0).getProductName());
-//    }
+    @Test
+     void testGetCustomerProductNamesAll() throws SQLException {
+        List<CustomersProducts> mockList = List.of(new CustomersProducts( "Customer1", "Product1"));
+        when(productRepository.getCustomerProductNames()).thenReturn(mockList);
+
+        List<CustomerProductDto> result = productService.getCustomerProductNamesAll();
+        assertFalse(result.isEmpty());
+        assertEquals("Customer1", result.get(0).getCustomer_name());
+        assertEquals("Product1", result.get(0).getProduct_name());
+    }
+
+    @Test
+     void testGetCustomerProductNamesAllEmptyList() throws SQLException {
+        when(productRepository.getCustomerProductNames()).thenReturn(Collections.emptyList());
+
+        List<CustomerProductDto> result = productService.getCustomerProductNamesAll();
+        assertTrue(result.isEmpty());
+    }
+
+    @Test
+     void testGetCustomerProductNamesAllSQLException() throws SQLException {
+        when(productRepository.getCustomerProductNames()).thenThrow(new SQLException("Database error"));
+
+        List<CustomerProductDto> result = productService.getCustomerProductNamesAll();
+        assertTrue(result.isEmpty());
+    }
+
 }
